--- a/src/app/contact/add/add.component.html
+++ b/src/app/contact/add/add.component.html
@@ -3,28 +3,28 @@
     <hr>
     <div class="row d-flex justify-content-center">
       <div class="col-md-6 justify-content-center " >
-        <form #myform = "ngForm" (ngSubmit) = "onSubmit(myform)">
+        <form #myform = "ngForm">
             <div class="form-group">
                 <label>Name: </label>
-                <input name="name" class="form-control" ngModel/> 
+                <input name="name" class="form-control" [(ngModel)] = "name"/> 
             </div>
             <div class="form-group">
                 <label>Contact: </label>
-                <input name="contact" class="form-control" ngModel/>
+                <input [(ngModel)] = "contact" class="form-control" name="contact"/>
             </div>
             <div class="form-group">
                 <label>Email: </label>
-                <input name="email" class="form-control" ngModel/> 
+                <input type="email" name="email" class="form-control" pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" [(ngModel)] = "email"/> 
             </div>
             <div class="input-group mb-3">
                 <div class="custom-file">
-                  <input type="file" class="custom-file-input" name="photo" (change)="onFileChanged($event)" ngModel>
+                  <input type="file" class="custom-file-input" name="photo" (change)="onFileChanged($event)" [(ngModel)] = "photo" required>
                   <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                 </div>
               </div>
             <div class="form-group d-flex justify-content-center">
-                <button type="submit" class="btn btn-success">Send</button>
-                <button type="submit" class="btn btn-danger">Send</button>
+                <button type="submit" class="btn btn-lg btn-block" (click)="onSubmit(myform)">Submit</button>
+                <!-- <button type="submit" class="btn btn-lg btn-block" (click)="onReset(myform)">Cancel</button> -->
             </div>
         </form>
       </div>
