--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,26 @@
-
+<div class="jumbtron">
+        <h1 class="display-4 text-center">Login</h1>
+        <hr>
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-6 justify-content-center " >
+            <form #myform = "ngForm">
+                <div class="form-group">
+                    <label>Email: </label>
+                    <input name="email" class="form-control" [(ngModel)] = "name"/> 
+                </div>
+                <div class="form-group">
+                    <label>Password: </label>
+                    <input [(ngModel)] = "password" class="form-control" name="contact"/>
+                </div>
+                
+                <div class="form-group d-flex justify-content-center">
+                    <button type="submit" class="btn btn-lg btn-success" (click)="onSubmit(myform)">Login</button>
+                    <!-- <button type="submit" class="btn btn-lg btn-block" (click)="onReset(myform)">Cancel</button> -->
+                </div>
+            </form>
+            </div>
+        </div>
+    </div>
     
     
     
