--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,11 +10,11 @@
                 </div>
                 <div class="form-group">
                     <label>Password: </label>
-                    <input [(ngModel)] = "password" class="form-control" name="contact"/>
+                    <input [(ngModel)] = "password" name="password" class="form-control"/>
                 </div>
                 
                 <div class="form-group d-flex justify-content-center">
-                    <button type="submit" class="btn btn-lg btn-success" (click)="onSubmit(myform)">Login</button>
+                    <button type="submit" class="btn btn-lg btn-success" (click)="Login(myform)">Login</button>
                     <!-- <button type="submit" class="btn btn-lg btn-block" (click)="onReset(myform)">Cancel</button> -->
                 </div>
             </form>
