--- a/src/app/contact/add/add.component.html
+++ b/src/app/contact/add/add.component.html
@@ -10,18 +10,13 @@
             </div>
             <div class="form-group">
                 <label>Contact: </label>
-                <input [(ngModel)] = "contact" class="form-control" name="contact"/>
+                <input [(ngModel)] = "contact" class="form-control" name="contact" placeholder="(00) 00000-0000"/>
             </div>
             <div class="form-group">
                 <label>Email: </label>
-                <input type="email" name="email" class="form-control" pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" [(ngModel)] = "email"/> 
+                <input type="email" name="email" class="form-control" placeholder="test@example.com" [(ngModel)] = "email"/> 
             </div>
-            <div class="input-group mb-3">
-                <div class="custom-file">
-                  <input type="file" class="custom-file-input" name="photo" (change)="onFileChanged($event)" [(ngModel)] = "photo" required>
-                  <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                </div>
-              </div>
+            
             <div class="form-group d-flex justify-content-center">
                 <button type="submit" class="btn btn-lg btn-block" (click)="onSubmit(myform)">Submit</button>
                 <!-- <button type="submit" class="btn btn-lg btn-block" (click)="onReset(myform)">Cancel</button> -->
