--- a/src/app/contact/details/details.component.html
+++ b/src/app/contact/details/details.component.html
@@ -1,1 +1,24 @@
-<p>details works!</p>
+<div class="jumbtron">
+        <h1 class="display-4 text-center">Details</h1>
+        <hr>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-sm-12" *ngFor="let contact of contacts">
+                    <div class="card hovercard">
+                        <div class="cardheader"></div>
+                        <div class="avatar">
+                            <img alt="" src="http://lorempixel.com/200/200/people/">
+                                <!-- <img alt="" [src]="{{ contact.Photo }}"> -->
+                        </div>
+                        <div class="info">
+                            <div class="title">
+                                <a>{{ contact.Name | uppercase}}</a>
+                            </div>
+                            <div class="desc">{{ contact.Email }}</div>
+                            <div class="desc">{{ contact.Contact }}</div>
+                        </div>
+                    </div>
+                    
+                </div>
+        </div>
+    </div>
