--- a/src/app/contact/list/list.component.html
+++ b/src/app/contact/list/list.component.html
@@ -1,41 +1,47 @@
 <div class="jumbtron">
-    <h1 class="display-4 text-center">List of My contacts</h1>
+    <h1 class="display-4 text-center">My contacts</h1>
     <hr>
-    <!-- <div class="card" style="width: 18rem;" *ngFor="let contact of contacts">
-        <img class="card-img-top" src="{{ contact.Photo }}" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title"> {{contact.Name}} </h5>
-            <p class="card-text"> {{contact.Contact}} </p>
-            <p class="card-text"> {{contact.Email}} </p>
-        </div>
-                
-    </div> -->
-
     <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-sm-6" *ngFor="let contact of contacts">
-        
-                    <div class="card hovercard">
-                        <div class="cardheader">
-        
-                        </div>
-                        <div class="avatar">
+        <div class="row">
+            <div class="col-lg-3 col-sm-6" *ngFor="let contact of contacts">
+                <div class="card hovercard">
+                    <div class="cardheader"></div>
+                    <div class="avatar">
                             <img alt="" src="http://lorempixel.com/100/100/people/">
-                        </div>
-                        <div class="info">
-                            <div class="title">
-                                <a target="_blank" href="/details/contact.Id">{{ contact.Name | uppercase}}</a>
-                            </div>
-                            <div class="desc">{{ contact.Email }}</div>
-                            <div class="desc">{{ contact.Contact }}</div>
-                        </div>
-                        <div class="card-footer" *ngIf="userLogged">
-                            <a class="btn btn-outline-warning  justify-content-center" (click)="onUpdate(contact)">Edit</a>
-                            <a class="btn btn-outline-danger justify-content-center" (click)="onDelete(contact.Name)">Delete</a>
-                        </div>
+                            <!-- <img alt="" [src]="{{ contact.Photo }}"> -->
                     </div>
-                    
+                    <div class="info">
+                        <div class="title">
+                            <a [routerLink]="['/details', contact.Id]">{{ contact.Name | uppercase}}</a>
+                        </div>
+                        <div class="desc">{{ contact.Email }}</div>
+                        <div class="desc">{{ contact.Contact }}</div>
+                    </div>
+                    <div class="card-footer" *ngIf="userLogged">
+                        <a class="btn btn-outline-warning  justify-content-center" [routerLink]="['/contact', 'edit', contact.Id]">Edit</a>
+                        <a class="btn btn-outline-danger   justify-content-center" [routerLink]="" data-toggle="modal" data-target="#exampleModal">Delete</a>
+                    </div>
+                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title" id="exampleModalLabel">Delete Contact?</h5>
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                  </button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure to delete {{contact.Name}}?
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                  <button type="button" class="btn btn-danger" (click)="onDelete(contact.Id)" data-dismiss="modal">DELETE</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                 </div>
+                
             </div>
-        </div>
-
+    </div>
+</div>
