--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,9 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['contact/add']">Add Contact</a>
             </li>
+            <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['']">List Contacts</a>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
         <button [routerLink]="['login']" class="btn btn-outline-success my-2 my-sm-0" *ngIf="!userLogged" type="submit">Login</button>
