--- a/src/app/contact/details/details.component.html
+++ b/src/app/contact/details/details.component.html
@@ -3,7 +3,7 @@
         <hr>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-sm-12" *ngFor="let contact of contacts">
+                <div class="col-lg-12 col-sm-12">
                     <div class="card hovercard">
                         <div class="cardheader"></div>
                         <div class="avatar">
