--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="form-group">
                     <label>Password: </label>
-                    <input [(ngModel)] = "password" name="password" class="form-control"/>
+                    <input [(ngModel)] = "password" name="password" class="form-control" type="password"/>
                 </div>
                 
                 <div class="form-group d-flex justify-content-center">
